--- a/Fiscal Year Calendar WatchKit App/Info.plist
+++ b/Fiscal Year Calendar WatchKit App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Fiscal Year Calendar WatchKit App</string>
+	<string>Fiscal Year Calendar</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
